[gd_scene load_steps=6 format=3 uid="uid://cv4amey0hu8cb"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_8i4vs"]
[ext_resource type="Texture2D" uid="uid://bp1ubcsqv4buy" path="res://Assets/Textures/Misc/GameLogoTop.png" id="2_didnb"]
[ext_resource type="Texture2D" uid="uid://beemh1iau462w" path="res://Assets/Textures/Misc/GameLogoBottom.png" id="3_4boxm"]
[ext_resource type="Texture2D" uid="uid://c1owk5h5fo5px" path="res://Assets/Textures/Misc/GMTK.png" id="4_4ltff"]

[sub_resource type="Gradient" id="Gradient_y5kaq"]
offsets = PackedFloat32Array(0, 0.75, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1)
metadata/_snap_enabled = true
metadata/_snap_count = 4

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_8i4vs")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(160, 90)

[node name="GameLogo" type="Node2D" parent="."]
position = Vector2(160, 60)

[node name="GameLogoTop" type="Sprite2D" parent="GameLogo"]
texture = ExtResource("2_didnb")

[node name="GameLogoBottom" type="Sprite2D" parent="GameLogo"]
position = Vector2(0, 15)
texture = ExtResource("3_4boxm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 112.0
offset_top = 96.0
offset_right = 208.0
offset_bottom = 160.0

[node name="ButtonPlay" type="Button" parent="VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Play"

[node name="ButtonQuit" type="Button" parent="VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Quit"

[node name="ButtonGMTK" type="Button" parent="."]
offset_top = 140.0
offset_right = 40.0
offset_bottom = 180.0
mouse_default_cursor_shape = 2
icon = ExtResource("4_4ltff")
icon_alignment = 1

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 512
lifetime = 8.0
preprocess = 8.0
emission_shape = 4
emission_points = PackedVector2Array(5, 4, 5, 5, 5, 6, 5, 7, 5, 8, 5, 9, 5, 10, 6, 4, 6, 7, 7, 4, 7, 7, 8, 5, 8, 6, 8, 12, 8, 13, 8, 14, 8, 15, 8, 16, 8, 17, 8, 18, 9, 17, 10, 6, 10, 9, 10, 16, 11, 6, 11, 8, 11, 10, 11, 17, 12, 6, 12, 8, 12, 10, 12, 12, 12, 13, 12, 14, 12, 15, 12, 16, 12, 17, 12, 18, 13, 7, 13, 8, 13, 9, 13, 10, 14, 15, 14, 16, 14, 17, 15, 6, 15, 7, 15, 8, 15, 9, 15, 10, 15, 14, 15, 18, 16, 7, 16, 14, 16, 18, 17, 6, 17, 15, 17, 16, 17, 17, 18, 6, 19, 14, 19, 15, 19, 16, 19, 17, 19, 18, 20, 6, 20, 15, 21, 4, 21, 5, 21, 6, 21, 7, 21, 8, 21, 9, 21, 14, 22, 6, 22, 10, 22, 14, 24, 4, 24, 6, 24, 7, 24, 8, 24, 9, 24, 10, 24, 12, 24, 13, 24, 14, 24, 15, 24, 16, 24, 17, 24, 18, 25, 16, 26, 7, 26, 8, 26, 9, 26, 15, 26, 17, 27, 6, 27, 10, 27, 14, 27, 18, 28, 6, 28, 10, 29, 7, 29, 9, 29, 12, 29, 14, 29, 15, 29, 16, 29, 17, 29, 18, 31, 4, 31, 5, 31, 6, 31, 7, 31, 8, 31, 9, 31, 14, 31, 15, 31, 16, 31, 17, 31, 18, 32, 10, 32, 14, 33, 14, 34, 7, 34, 8, 34, 9, 34, 15, 34, 16, 34, 17, 34, 18, 35, 6, 35, 8, 35, 10, 36, 6, 36, 8, 36, 10, 36, 15, 36, 16, 36, 17, 36, 20, 37, 7, 37, 8, 37, 10, 37, 14, 37, 18, 37, 20, 38, 14, 38, 18, 38, 20, 39, 7, 39, 10, 39, 14, 39, 15, 39, 16, 39, 17, 39, 18, 39, 19, 40, 6, 40, 8, 40, 10, 41, 6, 41, 8, 41, 10, 42, 6, 42, 9)
emission_colors = PackedColorArray()
gravity = Vector2(0, 0)
color_ramp = SubResource("Gradient_y5kaq")

[connection signal="pressed" from="VBoxContainer/ButtonPlay" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]
[connection signal="pressed" from="ButtonGMTK" to="." method="_on_button_gmtk_pressed"]
